work on databases, and begin rewrite of post requests
