# build/resources/main/META-INF/openapi.yml
@@ -9,7 +9,7 @@ servers:
   - url: http://129.146.23.77:1026
     description: Production server
 paths:
-  /user/?{userToken}&{username}:
+  /user?userToken={userToken}&username={username}:
     get:
       summary: Returns a user.
       parameters:
@@ -113,7 +113,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/userSchema"
-  /device/?{userToken}&{deviceID}:
+  /device/?userToken={userToken}&deviceID={deviceID}:
     get:
       summary: get a device using a deviceID
       parameters:
@@ -203,7 +203,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ambiguousErrorSchema"
-  /neighbors/?{userToken}&{username}:
+  /neighbors/?userToken={userToken}&username={username}:
     get:
       summary: get an array of neighbors using a username
       parameters:
